<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/txm"
                android:textColor="@color/txt_lv6" />

            <EditText
                android:id="@+id/etBarCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:background="@drawable/bg_border_efefef_5dp"
                android:padding="12dp"
                android:textColor="@color/txt_lv6"
                android:textSize="@dimen/txt_size_14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/ckrq"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvOutputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:drawableRight="@mipmap/ic_arrow_down"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:hint="@string/qxz"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/ladingNumber"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etLadingNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/thr"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etConsignor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/thrlxfs"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etConsignorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/hwfl"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvGoodsType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/wmsWarehouseId"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvWmsWarehouseIdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/spdh"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvProductCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/goodsName"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvGoodsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/suspicion"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvSuspicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/suspicionProblem"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etSuspicionProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:maxLength="200"
                android:enabled="false"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/remarks"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:maxLength="200"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/save"
        android:textColor="@color/main_color" />
</LinearLayout>