<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/txm"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etBarCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_bt"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/putOffDate"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvPutOffDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:drawableRight="@mipmap/ic_arrow_down"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:hint="@string/qxz"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/spdh"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvProductCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/goodsName"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvGoodsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/wmsWarehouseId_putoff"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvWmsWarehouseId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/wmsWarehouseDetailId_putoff"
                android:textColor="@color/txt_lv6" />
            <TextView
                android:id="@+id/tvWmsWarehouseDetailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_unused_5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:textSize="15sp"
                android:text="@string/remarks"
                android:textColor="@color/txt_lv6" />
            <EditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="200"
                android:textColor="@color/txt_lv6"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:textSize="@dimen/txt_size_14"
                android:padding="12dp"
                android:background="@drawable/bg_border_efefef_5dp"/>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/save"
        android:textColor="@color/main_color" />
</LinearLayout>