<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_white_15dp"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:drawableLeft="@mipmap/ic_bt"
                android:text="@string/txm"
                android:textColor="@color/txt_lv6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etBarCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLength="50"
                android:background="@drawable/bg_border_efefef_5dp"
                android:padding="12dp"
                android:textColor="@color/txt_lv6"
                android:textSize="@dimen/txt_size_14" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:text="@string/wmsWarehouseDetailId"
                android:textColor="@color/txt_lv6"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvWmsWarehouseDetailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_border_efefef_5dp"
                android:drawableRight="@mipmap/ic_arrow_down"
                android:hint="@string/qxz"
                android:padding="12dp"
                android:textColor="@color/txt_lv6"
                android:textSize="@dimen/txt_size_14" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/txt_lv5"
            android:text="@string/confirm"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/txt_lv1"
            android:text="@string/cancel"/>



    </LinearLayout>


</LinearLayout>